assets/css/style.scss
---
---

body {
    background: white;
    margin-bottom: 5em;
    overflow-x: hidden;
}

main {
    padding-top: 25px;
}

.ui.menu {
    background: #02244a;
}
.ui.menu .header.item:hover {
    color: white;
}

.ui.menu a.header.title.item {
    color: white;
}

.ui.menu .header.title.item:hover {
    color: #c7eef5;
}

.incroyablelibraire {
    position: fixed;
    left: 50%;
    top: 22px;
    z-index: 200;
    width: 300px;
    margin-left: -150px;
}

.incroyablelibraire .ui.tiny.images img {
    height: 80px;
}

.home .introduction-wrapper {
    margin-top: 8em;
}

.ui.basic.segment.introduction {
    background: #f07c41;
    color: white;
    border-top: 3px solid #df622c;
    border-bottom: 3px solid #df622c;
    transform: rotate(-2deg);
    margin: 2em -3em;
    padding-left: 3em;
    padding-right: 3em;

    .ui.header {
        margin-bottom: 0.3rem;
    }

    h4:first-letter {
        font-size: 3em;
        position: relative;
        float: left;
        margin-top: 20px;
        margin-right: 10px;
        text-shadow: 1px 3px 2px rgba(0,0,0,0.3);
    }

    a {
        color: white;
        border-bottom: 1px dotted white;
    }
    a:hover {
        color: white;
        border-bottom: 1px solid white;
    }
}

@supports (-moz-appearance:none) {
    .ui.basic.segment.introduction {
        h4:first-letter {
            margin-top: 0px;
        }
    }
}

.ui.segment.introduction .ui.header {
    color: white;
}

.ui.piled.segment.introduction:after, .ui.piled.segment.introduction:before,
.ui.stacked.segment.introduction:after, .ui.stacked.segment.introduction:before {
    background: #f07c41;
    border: 1px solid #df622c;
}

.ui.menu .item, .ui.inverted.link.list a.item {
    color: #c7eef5;
}

.ui.inverted.list>a.item>i.icon {
    color: inherit;
}

.ui.divided.inverted.horizontal.list>.item, .ui.divided.inverted.list>.item, .ui.divided.inverted.list>.list {
    border-color: #c7eef5;
}

.ui.menu .item img.logo {
    margin-right: 1.5em;
}

.main.container {
    margin-top: 7em;
}

.home .main.container {
    margin-top: 2em;
}

.ui.text.container {
    max-width: 910px;
}

.wireframe {
    margin-top: 2em;
}

.ui.footer.segment {
    margin: 5em -5em 5em;
    padding: 5em 0em;
    background: #02244a;
    color: #c7eef5;
    transform: rotate(-2deg);

    .container {
        transform: rotate(2deg);
    }

    .cursive a {
        color: white;

        &:hover {
            color: #c7eef5;
        }
    }
}

.title-cursive {
    font-family: 'Neonderthaw', cursive !important;
    font-size: 2.5rem !important;
    font-weight: normal !important;

    a {
        color: white;

        &:hover {
            color: #c7eef5;
        }
    }
}

.cursive {
    font-family: 'Square Peg', cursive !important;
    font-size: 2.5rem !important;
}

.cursive.small {
    font-size: 1.5rem !important;
}

h1, h2 {
    color: #df622c;
}

h2 a {
    color: #df622c;
}

h2 a:hover {
    color: #02244a;
}

h1.book-title:first-letter, h2.book-title:first-letter {
    font-size: 3em;
    position: relative;
    float: left;
    margin-top: 20px;
    margin-right: 10px;
    text-shadow: 3px 2px 0px #fff, 8px 7px 0px rgba(0,0,0,0.15);
}

@supports (-moz-appearance:none) {
    h1.book-title:first-letter, h2.book-title:first-letter {
        margin-top: -3px;
    }
}

hr {
    margin: 0;
    margin-bottom: 70px;
    border: 0;
    text-align: center;
}

hr:before {
    content: "\2022 \2022 \2022";
    font-size: 50px;
    color: #02244a;
}

.ui.footer.segment .cursive {
    color: white;
}

.footer hr {
    margin: 32px 0;
    margin-bottom: 48px;
}

.footer hr:before {
    color: white;
}

.ui.card > .content > .header:not(.ui), .ui.cards > .card > .content > .header:not(.ui) {
    font-size: 1.1em;
}

.ui.cards.remerciements {
    a {
        border-bottom: 1px dotted #4183c4;
    }
    a:hover {
        border-bottom: 1px solid #4183c4;
    }

    > .card > .image {
        text-align: center;
        padding: 20px;
        background: #cdf0ff;
        color: #02244a;
    }
}

.ui.image.raised {
    //box-shadow: 0 0 0 1px #d4d4d5, 0 2px 4px 0 rgb(34 36 38 / 12%), 0 2px 10px 0 rgb(34 36 38 / 15%);
}

.ui.image.rounded {
    border-radius: 8px;
}

.author {
    margin-top: -8px;
    margin-bottom: 18px;
    color: #4183c4;
    font-weight: bold;
    font-style: italic;
}

.ui.dots.labels .label, .ui.dots.label {
    background-color: #c7eef5;
    border-color: #ccc;
    color: #02244a;
}

.ui.buttons.back {
    .ui.icon.button {
        padding-right: 4.07142857em !important;
        border-radius: 0.28571429rem;
    }

    .ui.icon.button > .icon.right {
        left: auto;
        right: 0;
        box-shadow: 1px 0 0 0 transparent inset;
    }
}

/* Mobile */

@media only screen and (max-width: 767px) {
    [class*="mobile hidden"],
    [class*="tablet only"]:not(.mobile),
    [class*="computer only"]:not(.mobile),
    [class*="large monitor only"]:not(.mobile),
    [class*="widescreen monitor only"]:not(.mobile),
    [class*="or lower hidden"] {
      display: none !important;
    }

    .main.container {
        margin-top: 4em;
    }
}

@media only screen and (min-width: 768px) {
    [class*="computer hidden"] {
      display: none !important;
    }
}

